Updated to export CSV instead of XLSX