@@ -1,31 +1,38 @@
+import gov.fl.digital.ddw2infa.MetadataCache;
+import gov.fl.digital.ddw2infa.MetadataMapper;
+import gov.fl.digital.ddw2infa.Util;
+import gov.fl.digital.ddw2infa.column.ColumnsMetadata;
+import gov.fl.digital.ddw2infa.database.DatabasesMetadata;
+import gov.fl.digital.ddw2infa.link.LinksMetadata;
+import gov.fl.digital.ddw2infa.schema.SchemasMetadata;
+import gov.fl.digital.ddw2infa.table.TablesMetadata;
 import org.apache.jena.query.*;
 import org.apache.jena.rdf.model.Model;
-import org.apache.jena.rdf.model.ModelFactory;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 
 public class Ddw2InfaCustomMetaModelProcessor {
 
     /************************************************  INPUTS  ********************************************************/
-    private static final String OWNER = "FL-APD";
-
+    private static final String OWNER = "APD";
     private static final String FULL_GRAPH_TTL_FILE_PATH = "fl-apd-full-graph.ttl";
-
     /******************************************************************************************************************/
 
     private static final Logger logger = LogManager.getLogger(Ddw2InfaCustomMetaModelProcessor.class);
+    public static final String OUTPUT_DIRECTORY_PATH = "./output/" + OWNER + "/informatica_import/";
 
     public static void main(String[] args) throws IOException {
 
         LocalDateTime begin = LocalDateTime.now();
-        Model model = loadModelFrom(FULL_GRAPH_TTL_FILE_PATH);
+        Model model = Util.loadModelFrom(FULL_GRAPH_TTL_FILE_PATH);
 
         DatabasesMetadata databasesMetadata = new DatabasesMetadata();
         SchemasMetadata schemasMetadata = new SchemasMetadata();
@@ -33,30 +40,39 @@ public class Ddw2InfaCustomMetaModelProcessor {
         ColumnsMetadata columnsMetadata = new ColumnsMetadata();
         LinksMetadata linksMetadata = new LinksMetadata();
 
-        // TODO: in order to implement business glossary term, the INFA custom metamodel needs to be created.
-        //BusinessGlossaryTermMetadata businessGlossaryTermMetadata = new BusinessGlossaryTermMetadata();
+        logger.info("Extracting database metadata");
+        executeQueryAndGenerateCSV(model, databasesMetadata, schemasMetadata, linksMetadata, 100, ChronoUnit.SECONDS);
+        logger.info("Extracting table metadata");
+        executeQueryAndGenerateCSV(model, tablesMetadata, schemasMetadata, linksMetadata, 100, ChronoUnit.SECONDS);
+        logger.info("Extracting column metadata");
+        executeQueryAndGenerateCSV(model, columnsMetadata, schemasMetadata, linksMetadata, 10000, ChronoUnit.MINUTES);
 
-        executeQueriesAndGenerateCSV(model, columnsMetadata, 10000, ChronoUnit.MINUTES);
+        // TODO: Future work: to implement business glossary term, the INFA custom metamodel needs to be updated.
+        /*
+        BusinessGlossaryTermMetadata businessGlossaryTermMetadata = new BusinessGlossaryTermMetadata();
+        executeQueryAndGenerateCSV(model, businessGlossaryTermMetadata, schemasMetadata, linksMetadata, 100, ChronoUnit.SECONDS);
+        */
+
+        schemasMetadata.generateCsvFile(OUTPUT_DIRECTORY_PATH);
+        linksMetadata.generateCsvFile(OUTPUT_DIRECTORY_PATH);
+
         logger.info("Total processing time: " + begin.until(LocalDateTime.now(), ChronoUnit.MINUTES) +
                 " minutes).");
     }
 
-    private static Model loadModelFrom(String ttlFilePath) {
-        LocalDateTime begin = LocalDateTime.now();
-        Model model = ModelFactory.createDefaultModel();
-        logger.info("Begin loading " + ttlFilePath + " into model...");
-        model.read(ttlFilePath);
-        logger.info("Model loaded (" + begin.until(LocalDateTime.now(), ChronoUnit.SECONDS) + " seconds).");
-        return model;
-    }
-
-    private static void executeQueriesAndGenerateCSV(
-            Model model,
-            MetadataMapper metadataMapper,
-            int rowCountDisplayFrequency,
-            ChronoUnit logEntryTimeUnit
+    private static <X extends MetadataMapper<X>> void executeQueryAndGenerateCSV(
+        Model model,
+        MetadataCache<X> metadataCache,
+        SchemasMetadata schemasMetadata,
+        LinksMetadata linksMetadata,
+        int rowCountDisplayFrequency,
+        ChronoUnit logEntryTimeUnit
     ) throws IOException {
-        String queryString = Files.readString(Paths.get(metadataMapper.getQueryFilePath()));
+
+        URL url = Ddw2InfaCustomMetaModelProcessor.class.getClassLoader().getResource(metadataCache.getQueryFilePath());
+        if(null == url) { throw new IllegalArgumentException(metadataCache.getQueryFilePath() + " is not found."); }
+        File file = new File(url.getFile());
+        String queryString = new String(Files.readAllBytes(file.toPath()));
         int rowCount = 1;
         Query query = QueryFactory.create(queryString);
         try (QueryExecution queryExecution = QueryExecutionFactory.create(query, model)) {
@@ -64,16 +80,16 @@ public class Ddw2InfaCustomMetaModelProcessor {
             LocalDateTime localDateTime = LocalDateTime.now();
             while (results.hasNext()) {
                 if(rowCount % rowCountDisplayFrequency == 0) {
-                    logger.info("Processing " + metadataMapper.getLabel() + " record: " + (rowCount + 1) +
+                    logger.info("Processing " + metadataCache.getLabel() + " record: " + (rowCount + 1) +
                             "(" + localDateTime.until(LocalDateTime.now(), logEntryTimeUnit) + " " +
                             logEntryTimeUnit.name().toLowerCase() + ").");
                 }
                 QuerySolution querySolution = results.nextSolution();
-                //TODO: metadataMapper.addRecord(querySolution);
+                metadataCache.addRecord(querySolution, schemasMetadata, linksMetadata);
             }
         }
-        try (PrintWriter out = new PrintWriter(metadataMapper.getOutputFilePath())) {
-            out.println(metadataMapper.getCSV());
+        try (PrintWriter out = new PrintWriter(OUTPUT_DIRECTORY_PATH + metadataCache.getOutputFileName())) {
+            out.println(metadataCache.getCSV());
         }
     }
 }
